[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tokens/UtilToken/RangeHandlerScript.gd" type="Script" id=1]
[ext_resource path="res://VFX/MuzzleCannon.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 75.0267

[node name="RangeHandler" type="Position2D"]
script = ExtResource( 1 )

[node name="MuzzleFire" parent="." instance=ExtResource( 2 )]

[node name="FireRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 6

[node name="RangeFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="RangeFinder"]
shape = SubResource( 2 )

[connection signal="body_entered" from="RangeFinder" to="." method="_on_RangeFinder_body_entered"]
[connection signal="body_exited" from="RangeFinder" to="." method="_on_RangeFinder_body_exited"]
